--- a/minetest.conf
+++ b/minetest.conf
@@ -1,5 +1,8 @@
 default_privs = interact, shout, fast, money
 
+selectionbox_color = 0,0,0
+enable_node_highlighting = true
+
 #
 # Physics stuff
 #
