Allow above ground dungeons, update mg_villages & cottages

--- a/minetest.conf
+++ b/minetest.conf
@@ -21,6 +21,8 @@ movement_liquid_fluidity_smooth = 0.5
 movement_liquid_sink = 15
 movement_gravity = 9.75
 
+fall_bobbing_amount = 1.0
+
 #
 # Mapgen Stuff
 #
@@ -28,7 +30,7 @@ movement_gravity = 9.75
 cloud_height = 160
 
 mg_flags = trees, caves, dungeons, light
-enable_floating_dungeons = false
+enable_floating_dungeons = true
 mgv7_spflags = mountains, ridges
 
 mgv7_np_terrain_base = 4, 70, (600, 600, 600), 82341, 5, 0.6, 2.0
