Fix some warning messages

--- a/minetest.conf
+++ b/minetest.conf
@@ -3,6 +3,8 @@ default_privs = interact, shout, fast, money
 selectionbox_color = 0,0,0
 enable_node_highlighting = true
 
+debug_log_level = action
+
 #
 # Physics stuff
 #
