3D Torches and 3D Glow Crystal Torches

--- a/minetest.conf
+++ b/minetest.conf
@@ -5,6 +5,9 @@ enable_node_highlighting = true
 
 debug_log_level = action
 
+torches_enable_ceiling = false
+torches_style = minetest
+
 #
 # Physics stuff
 #
